[package]
name = "rolly-game-core"
version = "0.1.0"
edition = "2021"
description = "Shared game constants, multiplier tables, and payout logic for Rolly ZK rollup"

# Zero external dependencies — pure u64 arithmetic only.

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
